# python-desco

./: CLAUDE.md  README.md  app.py  desco.py  pyproject.toml  requirements.txt
.github/workflows/: pypi.yml
desco/: __init__.py  main.py
