[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "desco"
dynamic = ["version"]
description = "A Python CLI tool for Dhaka Electric Supply Company Limited (DESCO) prepaid electricity accounts"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Md Minhazul Haque", email = "mdminhazulhaque@gmail.com"}
]
maintainers = [
    {name = "Md Minhazul Haque", email = "mdminhazulhaque@gmail.com"}
]
keywords = ["desco", "electricity", "prepaid", "bangladesh", "utility", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Utilities",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
dependencies = [
    "requests>=2.28.0",
    "click>=8.0.0",
    "tabulate>=0.9.0",
    "urllib3>=1.26.0",
]

[project.urls]
Homepage = "https://github.com/mdminhazulhaque/python-desco"
Repository = "https://github.com/mdminhazulhaque/python-desco"
"Bug Reports" = "https://github.com/mdminhazulhaque/python-desco/issues"
"Source Code" = "https://github.com/mdminhazulhaque/python-desco"

[project.scripts]
desco-cli = "desco.main:app"

[tool.setuptools]
packages = ["desco"]

[tool.setuptools.dynamic]
version = {attr = "desco.__version__"}
